--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Assignment-2</title>
-<link rel="stylesheet" href="style.css">
+<!-- link to main stylesheet -->
+<link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
 <body>
 <h1>Our Menu</h1>
